<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/text_username"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#fff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:paddingLeft="2dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:background="@null"
            android:layout_height="35dp"
            android:textColor="#fff"
            android:text="@string/not_registered"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textColor="#009688"
            android:text="@string/register_now"
            android:textAppearance="@style/TextAppearance.AppCompat" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingTop="20dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/forgot_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingTop="20dp"
        android:text="@string/forgot_username"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#fff" />

</LinearLayout>